--- a/src/app/modules/auth/components/user-login/user-login.component.html
+++ b/src/app/modules/auth/components/user-login/user-login.component.html
@@ -1,18 +1,18 @@
-<main class="login-main">
+<div class="login-main">
     <div class="container">
         <div class="login-page">
             <div class="form">
-                <form>
+                <form [formGroup]="loginForm" (ngSubmit)="authUserLogin()">
                     <div class="login-logo">
                         <a [routerLink]=""><img src="assets/images/logo.png" alt="img"></a>
                     </div>
                     <p>Login to your account</p>
-                    <!-- <div class="alert alert-danger" ng-if="showAuthError">
-                        <strong>Error! </strong>{{authError}}
-                    </div> -->
-                    <!-- <div class="alert alert-success" ng-if="showAuthSuccess">
-                        <strong>Success! </strong>{{authSuccess}}
-                    </div> -->
+                    <div class="alert alert-danger" *ngIf="authError">
+                      <strong>Error! </strong>{{authError}}
+                    </div>
+                    <div class="alert alert-success" *ngIf="authSuccess">
+                      <strong>Success! </strong>{{authSuccess}}
+                    </div>
                     <!-- <?php if($this->session->flashdata('loginMsg')) { ?>
                         <div class="alert alert-danger">
                             <strong>Error! </strong> <?php echo $this->session->flashdata('loginMsg'); ?>
@@ -29,7 +29,7 @@
                         <span ng-show="userForm.password.$error.required">Password is required.</span>
                     </span> -->
                     <!-- <button [disabled]="!userForm.valid">Login</button> -->
-                    <button>Login</button>
+                    <button type="submit" [disabled]="!loginForm.valid">Login</button>
                     <div>
                         <p class="message pull-left">Not registered? <a [routerLink]="">Create an account</a></p>
                         <p class="message pull-right"><a [routerLink]="">Forgot Password?</a></p>
@@ -38,4 +38,4 @@
             </div>
         </div>
     </div>
-</main>
+  </div>
