--- a/src/app/modules/auth/components/login/login-form.component.html
+++ b/src/app/modules/auth/components/login/login-form.component.html
@@ -7,13 +7,13 @@
       <strong>Success! </strong>{{authSuccess}}
     </div>
     <div class="form-group">
-      <input formControlName="email" autocomplete="off" maxlength="100" class="form-control" type="text"
+      <input formControlName="email" autocomplete="off" class="form-control" type="text"
         placeholder="Username/Email" />
     </div>
     <!-- <p class="small text-danger" *ngIf="!loginForm.get('email').valid">Email</p> -->
 
     <div class="form-group">
-      <input formControlName="password" autocomplete="off" maxlength="128" required class="form-control" type="password"
+      <input formControlName="password" autocomplete="off" class="form-control" type="password"
         placeholder="Password" />
     </div>
     <div class="remember-me">
