--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                     <div>
-                        <p class="message pull-left"><a [routerLink]="['/userLogin']">Login</a></p>
+                        <p class="message pull-left"><a [routerLink]="['/login']">Login</a></p>
                         <p class="message pull-right"><a href="">Dashboard</a></p>
                     </div>
                 </form>
