--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -16,7 +16,7 @@
           <a class="russian enable">Russian</a>
         </li>
         <li *ngIf="!loggedInUserInfo">
-          <a [routerLink]="'register'">Create account</a>
+          <a [routerLink]="['auth/register']">Create account</a>
         </li>
 
 
