--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -74,18 +74,29 @@
                 <div class="col-sm-6">
                   <input autocomplete="off" formControlName="password" type="password" placeholder="Password *" />
                   <!-- {{!registrationForm.get('matchPassword').get('password').valid && registrationForm.get('matchPassword').get('password').touched}} -->
-                  <span style="color:red" *ngIf="!registrationForm.get('matchPassword').get('password').valid && registrationForm.get('matchPassword').get('password').touched">
-                    <span *ngIf="registrationForm.get('matchPassword').get('password').errors?.required">Password required</span>
-                    <span *ngIf="registrationForm.get('matchPassword').get('password').errors?.minlength || registrationForm.get('matchPassword').get('password').errors?.maxlength">Passwords must be between 6 and 20 characters.</span>
-                    <span *ngIf="registrationForm.get('matchPassword').get('password').errors?.pattern">Password must contain 1 upper case character, 1 lower case character and 1 digit.</span>
+                  <span style="color:red"
+                    *ngIf="!registrationForm.get('matchPassword').get('password').valid && registrationForm.get('matchPassword').get('password').touched">
+                    <span *ngIf="registrationForm.get('matchPassword').get('password').errors?.required">Password
+                      required</span>
+                    <span
+                      *ngIf="registrationForm.get('matchPassword').get('password').errors?.minlength || registrationForm.get('matchPassword').get('password').errors?.maxlength">Passwords
+                      must be between 6 and 20 characters.</span>
+                    <span *ngIf="registrationForm.get('matchPassword').get('password').errors?.pattern">Password must
+                      contain 1 upper case character, 1 lower case character and 1 digit.</span>
                   </span>
                 </div>
 
                 <div class="col-sm-6">
-                  <input id="confirmpassword" formControlName="confirmPassword" name="confirmpassword" type="password" placeholder="Confirm Password *" />
-                  <span style="color:red" *ngIf="(!registrationForm.get('matchPassword').get('confirmPassword').valid && registrationForm.get('matchPassword').get('confirmPassword').touched) || registrationForm.get('matchPassword').errors?.pMatch">
-                    <span *ngIf="registrationForm.get('matchPassword').get('confirmPassword').errors?.required">Please confirm your password.</span>
-                    <span *ngIf="registrationForm.get('matchPassword').errors?.pMatch">Passwords do not match.</span>
+                  <input id="confirmpassword" formControlName="confirmPassword" name="confirmpassword" type="password"
+                    placeholder="Confirm Password *" />
+                  <span style="color:red"
+                    *ngIf="(!registrationForm.get('matchPassword').get('confirmPassword').valid && registrationForm.get('matchPassword').get('confirmPassword').touched) || registrationForm.get('matchPassword').errors?.pMatch">
+
+                    <span *ngIf="registrationForm.get('matchPassword').get('confirmPassword').errors?.required && registrationForm.get('matchPassword').get('confirmPassword').touched">Please
+                      confirm your password.</span>
+
+                    <span *ngIf="registrationForm.get('matchPassword').get('confirmPassword').value !== '' && registrationForm.get('matchPassword').errors?.pMatch">Passwords do not match.</span>
+
                   </span>
 
                 </div>
